--- a/restaurante desafio/restaurante.html
+++ b/restaurante desafio/restaurante.html
@@ -101,7 +101,7 @@
           `
                 Valor total antes do Happy Hour (com desconto): R$ ${totalAntesHH}
                 Valor total depois do Happy Hour (sem desconto): R$ ${totalDepoisHH}
-                Valor da taxa de serviço: ${totalTaxaServico}%
+                Valor da taxa de serviço: R$${totalTaxaServico}
                 Valor final(com taxa): R$ ${totalFinal}
             `
             ;
